shared/src/test/data/yeast/invalid-json/unquoted-keyword-like.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
Error               4,  2,  2 't'
Indicator           5,  2,  3 ':'
WhiteSpace          6,  2,  4 ' '
Error               7,  2,  5 'a\n'
EndMapping          9,  3,  0 '}'
